@@ -14,9 +14,6 @@ perl:
   - "5.20"
   - "5.18"
   - "5.16"
-  - "5.14"
-  - "5.12"
-  - "5.10"
 
 before_install:
     - cpanm -n Dist::Zilla::App::Command::cover
